--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script src="script.js"></script>
-    <title>giacomoooooo</title>
+    <title>BEI GUA-I</title>
 </head>
 <body>
     <h1>BEI GUA-I</h1>
