--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         Let's Play
     </button>
     <div id="btnSection">
-    </div>
-    <!-- hitwebcounter Code START -->
-    <a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=7984229&style=0038&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a> 
+    </div><br><br>
+    <a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=7984229&style=0038&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
 </body>
 </html>
