--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=7984229&style=0038&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
     <br><br>
     <div id="sfccnxja6deukc99ea24tbaqru5djyarnnr"></div><script type="text/javascript" src="https://counter9.stat.ovh/private/counter.js?c=cnxja6deukc99ea24tbaqru5djyarnnr&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="website hit counter"><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=cnxja6deukc99ea24tbaqru5djyarnnr" border="0" title="website hit counter" alt="website hit counter"></a></noscript>
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-c14c481f-05e0-488e-a565-c0132f3d6d64"></div>
 </body>
 </html>
