--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </button>
     <div id="btnSection">
     </div><br>
+     <a href='https://beiguai.netlify.app/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=07bc0ff54e14af65549de109b201ff4b95c19488'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/940492/t/1"></script>
     <div id="sfccnxja6deukc99ea24tbaqru5djyarnnr"></div><script type="text/javascript" src="https://counter9.stat.ovh/private/counter.js?c=cnxja6deukc99ea24tbaqru5djyarnnr&down=async" async></script><noscript><img src="https://counter9.stat.ovh/private/freecounterstat.php?c=cnxja6deukc99ea24tbaqru5djyarnnr" border="0" title="website hit counter" alt="website hit counter"></noscript>
 </body>
 </html>
